--- a/style.css
+++ b/style.css
@@ -1,52 +1,38 @@
 body{
   background: skyblue;
-
 }
+
 *{
   box-sizing: border-box;
-  margin: auto;
-
-
+  -webkit-box-sizing: border-box;
+  -moz-box-box-sizing: border-box;
 }
 
-#calculator{
-
+.wrap{
   width:400px;
   margin: auto;
-  height: 400px;
+  height: auto;
   background: black;
-  padding: 20px;
+  padding: 1rem;
 }
 
-.screen
-{
-  width: 100%;
+input[type=text]{
+  width;100%;
   padding: 10px;
-  font-size: 5rem;
+  font-size: 22px;
   font-weight: bold;
   margin-top: 20px;
   border-radius: 5px;
-  text-align: right;
-
-
 }
 
- .keys
-{
-   display: grid;
-  grid-template-columns: repeat(4,1fr);
-  grid-gap: 20px;
-  height:60px;
-  font-size: 1rem;
-  padding:  15px 20px;
+input[type=button]{
+  width:89px;
+  padding: 10px;
+  font-size: 22px;
+  border-radius: 5px;
   font-weight: bold;
-  border:none;
-  color: grey;
-
-
-
 }
 
 #del{
-  width: 100px;
+  width: 100%;
 }
